# SetupSystems

./: README.md
5DGenerator/: 5DGenerator.py
AWS-Setup/: JNSetup.Makefile  login.Makefile  scp.Makefile  ubuntu-python3-install.sh
Bash-Setup/: Makefile  bash.sh  bash_profile.sh  pip.sh  py.sh  pyenv.sh
Docker/Dockerfiles/: CpuOnnx.Dockerfile  canda2.Dockerfile  conda.Dockerfile  py3opencv.Dockerfile  yukarin-cupy-caffe.Dockerfile
Docker/NvidiaDocker/: Makefile
Docker/cv2/: CV3.4.11.Dockerfile
DockerCompose/docker/: Dockerfile  requirements.txt
Dockers/DockerCompose/: docker-compose.yaml  (+1 more)
Video2Vector/: FeatureExtractor.py  GradCam.py  ModelToSave-GPU.py  ModelToSave.py  download_model.sh  generate_video_jpgs.py
bash-scripts/: count.sh  curl.sh  movie_duration.sh  rewrite_yolov4_configration.sh  tmux-Makefile
cppCmakeLists/: README.md
cppCmakeLists/onnx_classification/examples/: CMakeLists.txt
cv2/: ChannelShift.py  GammaContrast.py  create_mp4_from_image.py  cv2_videowriter.py  cv_segment.py  face_detection.py  medianBlur.py  mp4Toimg.py
jupyter_utils/: matplot_plot.py
local-voice-recording/: README.md  audio_record.py  bit_changer.py  install.sh  requirements.txt  voice_aug.py  volume_normalize.py
preprocessing/: original_generator.py
python_txt/: open_read.py
pytorch_optimizers/: shampoo.py
scraping/: pd_html2csv.py
sshkey/: awskey.sh  localssh.sh  omitpass_sshadd.sh
tcp/: client.py  server.py
tensorflow/: TFRecord.py  TTA_eval.py  tfresize.py
ultra96v2-edge/: Makefile  README.md
x0vncserver/: log.txt  x0vncserver.service
(+78 files in other folders)
